refactored error struct;
