# docs/swagger.json
@@ -711,13 +711,6 @@
                         "description": "Get the latest information",
                         "name": "use_last_revision",
                         "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "User token",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -1056,7 +1049,7 @@
         "httpv1.errorResponse": {
             "type": "object",
             "properties": {
-                "message": {
+                "error": {
                     "type": "string"
                 }
             }
@@ -1064,17 +1057,17 @@
         "models.AdminBanner": {
             "type": "object",
             "properties": {
+                "banner_id": {
+                    "type": "integer"
+                },
                 "content": {
                     "$ref": "#/definitions/models.Banner"
                 },
                 "created_at": {
                     "type": "string"
                 },
-                "feature": {
+                "feature_id": {
                     "$ref": "#/definitions/models.Feature"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "is_active": {
                     "type": "boolean"
@@ -1115,7 +1108,7 @@
         "models.Tag": {
             "type": "object",
             "properties": {
-                "tags_id": {
+                "tag_id": {
                     "type": "integer"
                 }
             }
